syntax = "proto3";
package cis.types;
option csharp_namespace = "SharedTypes.GrpcTypes";

import "PaginationSortingField.proto";

message PaginationResponse {
	int32 recordOffset = 1;
	int32 pageSize = 2;
	repeated PaginationSortingField sorting = 3;
	int32 recordsTotalSize = 4;
}