syntax = "proto3";
package cis.types;
option csharp_namespace = "SharedTypes.GrpcTypes";

message PaginationSortingField {
	string field = 1;
	bool descending = 2;
}